# 2026_JBU_PalWorld_Anti_Cheat

./: .gitignore  README.md
.claude/: settings.local.json
Analyze/Offset_Memo/: Palworld_ESP_Guide.md  Palworld_Offset_Chains.md  UnusedStatusPoint.txt
Analyze/PointerScanBoard/: README.md  test_vac.sqlite  walkthrough.md
Analyze/PointerScanBoard/PointerTables/hp_gworld/: hp_gworld.PTR  hp_gworld.PTR.results.100  hp_gworld.PTR.results.148  hp_gworld.PTR.results.150  hp_gworld.PTR.results.158  hp_gworld.PTR.results.160  hp_gworld.PTR.results.168  hp_gworld.PTR.results.170  hp_gworld.PTR.results.180  hp_gworld.PTR.results.1B8  hp_gworld.PTR.results.1E0  hp_gworld.PTR.results.228  hp_gworld.PTR.results.250  hp_gworld.PTR.results.260  hp_gworld.PTR.results.2B0  hp_gworld.PTR.results.2C0  hp_gworld.PTR.results.30  hp_gworld.PTR.results.38  hp_gworld.PTR.results.398  hp_gworld.PTR.results.40  hp_gworld.PTR.results.48  hp_gworld.PTR.results.50  hp_gworld.PTR.results.568  hp_gworld.PTR.results.58  hp_gworld.PTR.results.5A8  hp_gworld.PTR.results.5B0  hp_gworld.PTR.results.5D8  hp_gworld.PTR.results.5E0  hp_gworld.PTR.results.5F8  hp_gworld.PTR.results.60  hp_gworld.PTR.results.608  hp_gworld.PTR.results.610  hp_gworld.PTR.results.638  hp_gworld.PTR.results.6D0  hp_gworld.PTR.results.7E0  hp_gworld.PTR.results.88  hp_gworld.PTR.results.F8  hp_gworld.sqlite
Analyze/PointerScanBoard/PointerTables/inventoryslot_gworld/: inventoryslot_gworld.sqlite
Analyze/PointerScanBoard/PointerTables/statuspoint_gworld/: statuspoint_gworld.PTR  statuspoint_gworld.PTR.results.0  statuspoint_gworld.PTR.results.1  statuspoint_gworld.PTR.results.10  statuspoint_gworld.PTR.results.11  statuspoint_gworld.PTR.results.12  statuspoint_gworld.PTR.results.13  statuspoint_gworld.PTR.results.14  statuspoint_gworld.PTR.results.15  statuspoint_gworld.PTR.results.16  statuspoint_gworld.PTR.results.17  statuspoint_gworld.PTR.results.18  statuspoint_gworld.PTR.results.19  statuspoint_gworld.PTR.results.2  statuspoint_gworld.PTR.results.20  statuspoint_gworld.PTR.results.3  statuspoint_gworld.PTR.results.4  statuspoint_gworld.PTR.results.5  statuspoint_gworld.PTR.results.6  statuspoint_gworld.PTR.results.7  statuspoint_gworld.PTR.results.8  statuspoint_gworld.PTR.results.9  statuspoint_gworld.sqlite
Analyze/PointerScanBoard/backend/: main.py
Analyze/PointerScanBoard/frontend/src/: App.css  App.jsx  index.css
Anticheat_client/Common/: AcCommon.h
Anticheat_client/Module_Anti_Debugging/: CMakeLists.txt  README.md
Anticheat_client/Module_Anti_Debugging/src/: anti_debug_monitor.cpp
Anticheat_client/Module_Process_Watcher/: CMakeLists.txt  IDetectionModule.h  ProcessMonitorModule.cpp  ProcessMonitorModule.h  main.cpp
Anticheat_server/Rest_api_dashboard/: mock-server.js  게임_서버_환경_설계_및_분석.txt
Anticheat_server/Rest_api_dashboard/src/components/: PalworldRestDashboard.tsx
JBU_Pal_Hack/: README.md  implementation_plan.md  walkthrough.md
JBU_Pal_Hack/Injector/: .gitignore  CMakeLists.txt  main.cpp
JBU_Pal_Hack/Project/: .gitignore  CMakeLists.txt  setup_vendor.bat
JBU_Pal_Hack/Project/Cheats/HookCheats/: AmmoDecreaseHook.cpp  AmmoDecreaseHook.h  BuildAnywhereHook.cpp  BuildAnywhereHook.h  CanCatchBossHook.cpp  CanCatchBossHook.h  DurabilityWriteHook.cpp  DurabilityWriteHook.h  ExampleHook.cpp  ExampleHook.h  ExpPtrCaptureHook.cpp  ExpPtrCaptureHook.h  FoodHungerHook.cpp  FoodHungerHook.h  FoodTimerHook.cpp  FoodTimerHook.h  ItemSlotCaptureHook.cpp  ItemSlotCaptureHook.h  OtomoHook.cpp  OtomoHook.h  PalStatsCreationHook.cpp  PalStatsCreationHook.h  PlayerPtrCaptureHook.cpp  PlayerPtrCaptureHook.h  README.md  ResearchIncreaseHook.cpp  ResearchIncreaseHook.h  StaminaSubHook.cpp  StaminaSubHook.h  TechPointCaptureHook.cpp  TechPointCaptureHook.h  TemperatureHook.cpp  TemperatureHook.h  WriteItemsHook.cpp  WriteItemsHook.h
JBU_Pal_Hack/Project/Cheats/MemoryCheats/: GodMode.cpp  GodMode.h  InventoryCheats.cpp  InventoryCheats.h  ItemDurabilityCheats.cpp  ItemDurabilityCheats.h  PalCheats.cpp  PalCheats.h  PlayerCheats.cpp  PlayerCheats.h  README.md  SocialCheats.cpp  SocialCheats.h  StatBoost.cpp  StatBoost.h  TechCheats.cpp  TechCheats.h  TempControl.cpp  TempControl.h
JBU_Pal_Hack/Project/Core/: CrashHandler.cpp  CrashHandler.h  HackMain.cpp  HackMain.h  Logger.cpp  Logger.h  dllmain.cpp
JBU_Pal_Hack/Project/GUI/: Menu.cpp  Menu.h  Overlay.cpp  Overlay.h
JBU_Pal_Hack/Project/Memory/: Cheats.cpp  Cheats.h  CursorHooks.cpp  CursorHooks.h  HookManager.cpp  HookManager.h  MidHook.cpp  MidHook.h  NopHook.cpp  NopHook.h  SaveSpaceHook.cpp  SaveSpaceHook.h  Scanner.cpp  Scanner.h
JBU_Pal_Hack/Project/SDK/: Engine_structs.h  Offsets.h  Pal.cpp  Pal.h  Pal_structs.h  Signatures.h
JBU_Pal_Hack/Project/fixed_lib/: kiero.cpp
JBU_Pal_Hack/Reference/: functions_ko.md  obfuscation_ko.md  structure_ko.md
JBU_Pal_Hack/Reference/CT_Files/: Palworld-Win64-Shipping.CT  Palworld_Hack.CT
JBU_Pal_Hack/Reference/Hack/: game_access_ko.md
JBU_Pal_Hack/Reference/Report/: 2026-05-06_Memory_Cheat_Expansion.txt  2026-05-12_Pal_Stat_And_TabUI_Expansion.txt  2026-05-13_Party_Freshness_Durability_Expansion.txt  2026-06-03_AntiCheat_Detection_Modules_Expansion.txt  2026-06-07_Track2_P2_Conditional_Branch_And_Injection_Hooks.txt
JBU_Pal_Hack/Reference/mdfiles/: 2026-05-07_AOB_Patterns_CT_Analysis.md  CT_Analysis_Palworld.md  implementation_plan_2.md  skeleton_refinement_plan.md
